--- a/output/index.html
+++ b/output/index.html
@@ -155,6 +155,8 @@ Error message and password prompt
 
 <li>$:/palette</li>
 
+<li>$:/palettes/ietsPAL</li>
+
 <li>$:/plugins/tiddlywiki/highlight</li>
 
 <li>$:/SiteTitle</li>
@@ -197,6 +199,8 @@ Error message and password prompt
 
 <li>Characters</li>
 
+<li>characters</li>
+
 <li>Contacts</li>
 
 <li>Crafts</li>
@@ -213,6 +217,8 @@ Error message and password prompt
 
 <li>Desert Eagle .357</li>
 
+<li>draft</li>
+
 <li>Drive</li>
 
 <li>Empathy</li>
@@ -224,6 +230,8 @@ Error message and password prompt
 <li>Fight</li>
 
 <li>FX-05 Xiuhcoatl</li>
+
+<li>I&amp;TS – Worldbuilding Sheet</li>
 
 <li>Ice &amp; The Sky</li>
 
@@ -263,7 +271,15 @@ Error message and password prompt
 
 <li>Stealth</li>
 
+<li>The Pointy Boots</li>
+
+<li>toc</li>
+
+<li>weapons</li>
+
 <li>Will</li>
+
+<li>worldbuilding</li>
 
 <li>Worldbuilding Sheet</li>
 
@@ -9174,8 +9190,115 @@ Error message and password prompt
 <div title="$:/isEncrypted" revision="0" bag="default">
 <pre>no</pre>
 </div>
-<div created="20190508225735192" modified="20190508225752943" title="$:/palette" type="text/vnd.tiddlywiki" revision="0" bag="default">
-<pre>$:/palettes/Vanilla</pre>
+<div created="20190508225735192" modified="20190528070723694" title="$:/palette" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre>$:/palettes/ietsPAL</pre>
+</div>
+<div created="20190518055842382" description="" modified="20190520051402460" name="Ice &amp; The Sky Dark" tags="$:/tags/Palette" title="$:/palettes/ietsPAL" type="application/x-tiddler-dictionary" revision="0" bag="default">
+<pre>alert-background: #ffe476
+alert-border: #b99e2f
+alert-highlight: #881122
+alert-muted-foreground: #b99e2f
+background: #2c2c2c
+blockquote-bar: &lt;&lt;colour muted-foreground&gt;&gt;
+button-background: #2c2c2c
+button-foreground: #f0f0f0
+button-border: #404040
+code-background: #000000
+code-border: #e1e1e8
+code-foreground: #00ff00
+dirty-indicator: #ff0000
+download-background: #34c734
+download-foreground: &lt;&lt;colour background&gt;&gt;
+dragger-background: &lt;&lt;colour foreground&gt;&gt;
+dragger-foreground: &lt;&lt;colour background&gt;&gt;
+dropdown-background: &lt;&lt;colour background&gt;&gt;
+dropdown-border: &lt;&lt;colour muted-foreground&gt;&gt;
+dropdown-tab-background-selected: #fff
+dropdown-tab-background: #ececec
+dropzone-background: rgba(0,200,0,0.7)
+external-link-background-hover: inherit
+external-link-background-visited: inherit
+external-link-background: inherit
+external-link-foreground-hover: inherit
+external-link-foreground-visited: #00aa00
+external-link-foreground: #00ff00
+foreground: #ffffff
+message-background: #2c2c2c
+message-border: #cfd6e6
+message-foreground: #547599
+modal-backdrop: &lt;&lt;colour foreground&gt;&gt;
+modal-background: &lt;&lt;colour background&gt;&gt;
+modal-border: #999999
+modal-footer-background: #f5f5f5
+modal-footer-border: #dddddd
+modal-header-border: #eeeeee
+muted-foreground: #999999
+notification-background: #ffffdd
+notification-border: #999999
+page-background: #1c1c1c
+pre-background: #2c2c2c
+pre-border: #cccccc
+primary: #ccccff
+select-tag-background: 
+select-tag-foreground: 
+sidebar-button-foreground: &lt;&lt;colour foreground&gt;&gt;
+sidebar-controls-foreground-hover: #000000
+sidebar-controls-foreground: #ffffff
+sidebar-foreground-shadow: rgba(255,255,255, 0.0)
+sidebar-foreground: #acacac
+sidebar-muted-foreground-hover: #444444
+sidebar-muted-foreground: #c0c0c0
+sidebar-tab-background-selected: #000
+sidebar-tab-background: &lt;&lt;colour tab-background&gt;&gt;
+sidebar-tab-border-selected: &lt;&lt;colour tab-border-selected&gt;&gt;
+sidebar-tab-border: &lt;&lt;colour tab-border&gt;&gt;
+sidebar-tab-divider: &lt;&lt;colour tab-divider&gt;&gt;
+sidebar-tab-foreground-selected: 
+sidebar-tab-foreground: &lt;&lt;colour tab-foreground&gt;&gt;
+sidebar-tiddler-link-foreground-hover: #ffcccc
+sidebar-tiddler-link-foreground: #ccccff
+site-title-foreground: &lt;&lt;colour tiddler-title-foreground&gt;&gt;
+static-alert-foreground: #aaaaaa
+tab-background-selected: #000000
+tab-background: #000000
+tab-border-selected: #ccccff
+tab-border: #2c2c2c
+tab-divider: #ccccff
+tab-foreground-selected: &lt;&lt;colour tab-foreground&gt;&gt;
+tab-foreground: #ccccff
+table-border: #404040
+table-footer-background: #404040
+table-header-background: #404040
+tag-background: #ccccff
+tag-foreground: #000
+tiddler-background: &lt;&lt;colour background&gt;&gt;
+tiddler-border: &lt;&lt;colour background&gt;&gt;
+tiddler-controls-foreground-hover: #888888
+tiddler-controls-foreground-selected: #444444
+tiddler-controls-foreground: #cccccc
+tiddler-editor-background: #2c2c2c
+tiddler-editor-border-image: #ffffff
+tiddler-editor-border: #202020
+tiddler-editor-fields-even: #2c2c2c
+tiddler-editor-fields-odd: #202020
+tiddler-info-background: #2c2c2c
+tiddler-info-border: #dddddd
+tiddler-info-tab-background: #f8f8f8
+tiddler-link-background: &lt;&lt;colour background&gt;&gt;
+tiddler-link-foreground: &lt;&lt;colour primary&gt;&gt;
+tiddler-subtitle-foreground: #c0c0c0
+tiddler-title-foreground: #ccccff
+toolbar-new-button: 
+toolbar-options-button: 
+toolbar-save-button: 
+toolbar-info-button: 
+toolbar-edit-button: 
+toolbar-close-button: 
+toolbar-delete-button: 
+toolbar-cancel-button: 
+toolbar-done-button: 
+untagged-background: #999999
+very-muted-foreground: #888888</pre>
 </div>
 <div author="JoaoBolila" core-version="&gt;=5.0.0" dependents="" description="Highlight.js: syntax highlighting" list="readme usage license" plugin-type="plugin" title="$:/plugins/tiddlywiki/highlight" type="application/json" version="5.1.19" revision="0" bag="default">
 <pre>{
@@ -9627,6 +9750,9 @@ In genres that rely on the use of a lot of technology, this skill also includes 
 <div created="20190509000743365" modified="20190509001404271" tags="toc" title="Characters" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>&lt;&lt;toc characters&gt;&gt;</pre>
 </div>
+<div color="#0432ff" created="20190528231852829" modified="20190528231853940" title="characters" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre></pre>
+</div>
 <div created="20190509032755284" modified="20190509032938627" tags="skills" title="Contacts" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Contacts is the skill of knowing and making connections with people. It presumes proficiency with all means of networking available in the setting.
 
@@ -9677,7 +9803,7 @@ If working with different types of tech is important to your game, you might hav
 
 If you’re going to do this, make sure that you have a reason for it besides pedantry—if the only thing that splitting the skills gets you is the same effects with different names, you should keep it more generalized and use stunts to handle the specialties.</pre>
 </div>
-<div created="20190509052607771" modified="20190509052629655" tags="resources" title="cybcraft.txt" type="text/plain" revision="0" bag="default">
+<div created="20190509052607771" modified="20190520051534054" tags="resources" title="cybcraft.txt" type="text/plain" revision="0" bag="default">
 <pre>-------------------------------------------------------
 (By: &quot;Mike Morgan DTN 592-5565&quot; &lt;morgan@csc32.enet.dec.com&gt;)
 
@@ -11906,9 +12032,8 @@ nurture the human species. We are involved in a labor of love in
 creating a framework to benefit our children and our future
 selves.</pre>
 </div>
-<div created="20190509052245504" modified="20190509052429372" tags="references" title="cybermud.txt" type="text/plain" revision="0" bag="default">
-<pre>
-From: portal!cup.portal.com!Tagi@uunet.UU.NET
+<div created="20190509052245504" modified="20190520051527641" tags="references" title="cybermud.txt" type="text/plain" revision="0" bag="default">
+<pre>From: portal!cup.portal.com!Tagi@uunet.UU.NET
 Subject: PHIL: MUDs and Reality (Long Theory)
 Date: Wed, 16 Dec 92 16:28:29 PST
 
@@ -12134,7 +12259,7 @@ Those who speak of objects in 'abstract' terminology as if they
 were in any sense 'real' are either mistaken or confusing to me due to
 their 'abstractness'.  'Abs</pre>
 </div>
-<div created="20190508234520783" icon="dawn_rivers.jpg" modified="20190514184337614" tags="characters" title="Dawn Rivers" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20190508234520783" icon="dawn_rivers.jpg" modified="20190528231818132" tags="characters draft" title="Dawn Rivers" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>[img[dawn_rivers.jpg]]
 
 | !Name:|Dawn García Rivers |
@@ -12255,7 +12380,7 @@ their 'abstractness'.  'Abs</pre>
 | !Organization| |
 | !Created by|[[@jarxg]] |</pre>
 </div>
-<div _canonical_uri="/files/images/dawn_rivers.jpg" created="20190514184028105" modified="20190514195013878" title="dawn_rivers.jpg" type="image/jpeg" revision="0" bag="default">
+<div _canonical_uri="/files/images/dawn_rivers.jpg" created="20190514184028105" modified="20190528070327355" title="dawn_rivers.jpg" type="image/jpeg" revision="0" bag="default">
 <pre></pre>
 </div>
 <div created="20190509030858002" modified="20190509031326108" tags="skills" title="Deceive" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -12297,6 +12422,9 @@ As long as you get your advantage, you’re fine. Use it as an opportunity to cr
 ---
 
 Source: [[https://en.wikipedia.org/wiki/IMI_Desert_Eagle]]</pre>
+</div>
+<div color="#fffc00" created="20190528231830545" modified="20190528231831661" title="draft" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre></pre>
 </div>
 <div created="20190509044847405" modified="20190509045139019" tags="skills" title="Drive" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>The Drive skill is all about operating vehicles and things that go fast.
@@ -12433,8 +12561,130 @@ You could specialize even further if you wanted different classes of weapons to 
 
 Source: [[https://en.wikipedia.org/wiki/FX-05_Xiuhcoatl]]</pre>
 </div>
-<div created="20190509001404523" modified="20190509051242077" tags="start" title="Ice &amp; The Sky" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20190528224806593" modified="20190528231801913" tags="worldbuilding sheets draft" title="I&amp;TS – Worldbuilding Sheet" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre>!! List media
+
+# [[Fallout (video games)]]
+# [[The Revenant (film)]]
+# [[At the Mountains of Madness]]
+# [[Twin Peaks (TV show)]]
+# [[Torment: Tides of Numenera (video game)]]
+# [[Stalker (film)]]
+
+!! Gather inspirations
+
+# [[Postapocalypse]]
+# [[Survivalism]]
+# [[Cosmic horror]]
+# [[Surrealism]]
+# [[Cyphers]] and [[Numenera]]
+# [[Unfathomable technologies]] and [[First contact]]
+
+!! Describe genre and scale
+
+| !Genre type|Postapocalypse |
+| !Descriptor|Surreal |
+| !Scale|Medium scale (group of people traverse a region) |
+
+!! Stablish facts
+
+# [[The Guadalupe Militia]] protects civilization from the yet unseen horrors from [[The Beyond]].
+# Nobody comes back from [[The Beyond]].
+# Rests of ancient [[early-21st Century technology]] can be found everywhere.
+# [[Hacienda de Guadalupe]] attracts eccentric and shady people alike.
+# No government has assumed responsibility of what happens at the border with [[The Beyond]].
+# The only way to enter [[The Beyond]] is by foot.
+
+! ''Ice &amp; The Sky: [[Surreal Postapocalypse]]''
+
+!! Create sparks
+
+# &lt;!-- Legacy issue --&gt;
+# &lt;!-- Current issue --&gt;
+# &lt;!-- Impending issue --&gt;
+# &lt;!-- Place --&gt;
+# &lt;!-- Place --&gt;
+# &lt;!-- Place --&gt;
+# &lt;!-- Place --&gt;
+# &lt;!-- Place --&gt;
+
+!! Select the issues
+
+| !Legacy issue| |
+| !Legacy aspect| |
+
+| !Current issue| |
+| !Current aspect| |
+
+| !Impending issue| |
+| !Impending aspect| |
+
+!! Create faces
+
+| !Legacy issue|! |
+| !Legacy supporter|! |
+| !Descriptor| |
+| !Skill| |
+| !Legacy rejector|! |
+| !Descriptor| |
+| !Skill| |
+
+| !Current issue|! |
+| !Current supporter|! |
+| !Descriptor| |
+| !Skill| |
+| !Current rejector|! |
+| !Descriptor| |
+| !Skill| |
+
+| !Impending issue|! |
+| !Impending supporter|! |
+| !Descriptor| |
+| !Skill| |
+| !Impending rejector|! |
+| !Descriptor| |
+| !Skill| |
+
+!! Create places
+
+| !Spark| |
+| !Place name| |
+| !Descriptor| |
+| !Situational aspect| |
+
+| !Spark| |
+| !Place name| |
+| !Descriptor| |
+| !Situational aspect| |
+
+| !Spark| |
+| !Place name| |
+| !Descriptor| |
+| !Situational aspect| |
+
+| !Spark| |
+| !Place name| |
+| !Descriptor| |
+| !Situational aspect| |
+
+| !Spark| |
+| !Place name| |
+| !Descriptor| |
+| !Situational aspect| |
+
+| !Spark| |
+| !Place name| |
+| !Descriptor| |
+| !Situational aspect| |
+
+---
+
+From A Spark in Fate.</pre>
+</div>
+<div created="20190509001404523" modified="20190520050943695" tags="start" title="Ice &amp; The Sky" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>By [[@jarxg]]
+
+This is a work in progress.
 
 !! Contents
 
@@ -12593,7 +12843,7 @@ If that sounds broad, consider the following as just a few of the possibilities 
 | !Eavesdropper|On a successful Investigate roll to create an advantage by eavesdropping on a conversation, you can discover or create one additional aspect (though this doesn’t give you an extra free invocation). |
 | !The Power of Deduction|Once per scene you can spend a fate point (and a few minutes of observation) to make a special Investigate roll representing your potent deductive faculties. For each shift you make on this roll you discover or create an aspect, on either the scene or the target of your observations, though you may only invoke one of them for free.|</pre>
 </div>
-<div created="20190509020422203" icon="john_emmanuel.jpg" modified="20190512064006698" tags="characters" title="John Emmanuel" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20190509020422203" icon="john_emmanuel.jpg" modified="20190528231811393" tags="characters draft" title="John Emmanuel" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>[img[john_emmanuel.jpg]]
 
 | !Name:|John Emmanuel |
@@ -13024,6 +13274,72 @@ Again, as with Fight, if it’s important to your setting to make a distinction 
 | !Ninja Vanish|Once per scene, you can vanish while in plain sight by spending a fate point, using a smoke pellet or other mysterious technique. This places the Vanished boost on you. While you’re vanished, no one can attack or create an advantage on you until after they’ve succeeded at an overcome roll with Notice to suss out where you went (basically meaning they have to give up an exchange to try). This aspect goes away as soon as you invoke it, or someone makes that overcome roll. |
 | !Slippery Target|Provided you’re in darkness or shadow, you can use Stealth to defend against Shoot attacks from enemies that are at least one zone away. |</pre>
 </div>
+<div created="20190528232007821" modified="20190528232636273" tags="resources sheets" title="The Pointy Boots" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre>| !Name:|The Pointy Boots |
+| !Description:|Nomad electronic punk band |
+
+---
+
+! Aspects
+
+| !High concept:| |
+| !Trouble:| |
+| !Signature:| |
+| !Ambition:| |
+| !Background:| |
+| !Conviction:| |
+| !Disadvantage:| |
+| !Exceptional skill:| |
+| !Foe:| |
+| !Gear:| |
+| !Help:| |
+| !Inferior skill:| |
+
+! Skills
+
+&lt;!-- Rockalypse? --&gt;
+
+| !Great (+4)| | !X | !X | !X |
+| !Good (+3)| | | !X | !X |
+| !Fair (+2)| | | | !X |
+| !Average (+1)| | | | |
+
+---
+
+! Extras
+
+| !Name|!Description |
+| [[Shirley Bomb]]|Vocals |
+| [[Dalafey Single-Coil]]|Guitar |
+| [[Lofi López]]|Bass and synths |
+| [[Rob Gonzo]]|Drums and rhythm machine |
+
+! Stunts
+
+| !Name|!Description |
+
+---
+
+! Character creation
+
+!! Phase One: Your Adventure
+
+| !Aspect:| |
+
+!! Phase Two: Crossing Paths
+
+| !Aspect:| |
+
+!! Phase Three: Crossing Paths Again
+
+| !Aspect:| |</pre>
+</div>
+<div color="#929292" created="20190528231839806" modified="20190528231840928" title="toc" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre></pre>
+</div>
+<div color="#0432ff" created="20190528231902750" modified="20190528231903867" title="weapons" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre></pre>
+</div>
 <div created="20190509031432514" modified="20190509031600509" tags="skills" title="Will" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>The Will skill represents your character’s general level of mental fortitude, the same way that Physique represents your physical fortitude.
 
@@ -13044,6 +13360,9 @@ Contests of Will might reflect particularly challenging games, like chess, or co
 | !Strength From Determination|Use Will instead of Physique on any overcome rolls representing feats of strength. |
 | !Hard Boiled|You can choose to ignore a mild or moderate consequence for the duration of the scene. It can’t be compelled against you or invoked by your enemies. At the end of the scene it comes back worse, though; if it was a mild consequence it becomes a moderate consequence, and if it was already moderate, it becomes severe. |
 | !Indomitable|+2 to defend against Provoke attacks specifically related to intimidation and fear. |</pre>
+</div>
+<div color="#0432ff" created="20190528231844711" modified="20190528231849324" title="worldbuilding" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre></pre>
 </div>
 <div created="20190509021956936" modified="20190509022915909" tags="sheets" title="Worldbuilding Sheet" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>! List media
